--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.datasource.url=jdbc:mysql://localhost:3306/mytest?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=qwasZX4321
+spring.datasource.username=*
+spring.datasource.password=*
